--- a/index.html
+++ b/index.html
@@ -4,11 +4,87 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Vite + TS + SCSS</title>
   </head>
   <body>
     <div id="app">
       <div class="slider">
+        <div class="slider__item">
+          <div class="gallery">
+            <a href="" class="gallery__item gallery__item--vertical">
+              1
+              <img src="" alt="" class="gallery__image">
+            </a>
+            <a href="" class="gallery__item gallery__item--horizontal">
+              2
+              <img src="" alt="" class="gallery__image">
+            </a>
+            <a href="" class="gallery__item">
+              3
+              <img src="" alt="" class="gallery__image">
+            </a>
+            <a href="" class="gallery__item">
+              4
+              <img src="" alt="" class="gallery__image">
+            </a>
+          </div>
+          <div class="gallery">
+            <a href="" class="gallery__item gallery__item--horizontal">
+              1
+              <img src="" alt="" class="gallery__image">
+            </a>
+            <a href="" class="gallery__item">
+              3
+              <img src="" alt="" class="gallery__image">
+            </a>
+            <a href="" class="gallery__item">
+              2
+              <img src="" alt="" class="gallery__image">
+            </a>
+            <a href="" class="gallery__item">
+              4
+              <img src="" alt="" class="gallery__image">
+            </a>
+          </div>
+        </div>
+        <div class="slider__item">
+          <div class="gallery">
+            <a href="" class="gallery__item">
+              1
+              <img src="" alt="" class="gallery__image">
+            </a>
+            <a href="" class="gallery__item gallery__item--big">
+              2
+              <img src="" alt="" class="gallery__image">
+            </a>
+            <a href="" class="gallery__item gallery__item-vertical">
+              3
+              <img src="" alt="" class="gallery__image">
+            </a>
+            <a href="" class="gallery__item">
+              4
+              <img src="" alt="" class="gallery__image">
+            </a>
+          </div>
+          <div class="gallery">
+            <a href="" class="gallery__item">
+              1
+              <img src="" alt="" class="gallery__image">
+            </a>
+            <a href="" class="gallery__item">
+              2
+              <img src="" alt="" class="gallery__image">
+            </a>
+            <a href="" class="gallery__item">
+              3
+              <img src="" alt="" class="gallery__image">
+            </a>
+            <a href="" class="gallery__item gallery__item-horizontal">
+              4
+              <img src="" alt="" class="gallery__image">
+            </a>
+          </div>
+        </div>
         <div class="slider__item">
           <div class="gallery">
             <a href="" class="gallery__item">
@@ -30,15 +106,19 @@
           </div>
           <div class="gallery">
             <a href="" class="gallery__item">
+              1
               <img src="" alt="" class="gallery__image">
             </a>
             <a href="" class="gallery__item">
+              2
               <img src="" alt="" class="gallery__image">
             </a>
             <a href="" class="gallery__item">
+              3
               <img src="" alt="" class="gallery__image">
             </a>
             <a href="" class="gallery__item">
+              4
               <img src="" alt="" class="gallery__image">
             </a>
           </div>
