--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
       <div class="slider">
         <div class="slider__item">
           <div class="gallery">
-            <a href="" class="gallery__item gallery__item--vertical">
+            <a href="" class="gallery__item ">
               1
               <img src="" alt="" class="gallery__image">
             </a>
-            <a href="" class="gallery__item gallery__item--horizontal">
+            <a href="" class="gallery__item ">
               2
               <img src="" alt="" class="gallery__image">
             </a>
-            <a href="" class="gallery__item">
+            <a href="" class="gallery__item ">
               3
               <img src="" alt="" class="gallery__image">
             </a>
-            <a href="" class="gallery__item">
+            <a href="" class="gallery__item gallery__item--vertical  gallery__item--right">
               4
               <img src="" alt="" class="gallery__image">
             </a>
